<resources>
    <string name="app_name">OneBandhan</string>
    <string name="welcome">Welcome</string>
    <string name="to_bandhan">to OneBandhan!</string>
    <string name="shopkeeper"><![CDATA[(Shopkeeper & Retailer)]]></string>
    <string name="login">Log in</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_to_create_acc">Sign in to create account</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="login_with_true_caller">LOG IN WITH TRUECALLER</string>
    <string name="dont_have_an_account">Don\'t have an account? </string>
    <string name="welcome_">Welcome!</string>
    <string name="login_to_continue_acc">Login to continue account</string>
    <string name="name">Name</string>
    <string name="I_agree_with">I agree with</string>
    <string name="terms_and_policies"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="submit">SUBMIT</string>
    <string name="signup_with_true_caller">SIGN UP WITH TRUECALLER</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="otp_verification">OTP Verification</string>
    <string name="to_verify_phone_no">To verify your phone no.</string>
    <string name="We_are_retrieving_OTP">We are retrieving 4 digit OTP sent on your mobile number. You can also enter it manually and proceed</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_OTP_with_time">Resend OTP in </string>
    <string name="verify_continue"><![CDATA[VERIFY & CONTINUE]]></string>
    <string name="shop_name">Shop Name</string>
    <string name="address_line_one">Address Line 1</string>
    <string name="address_line_two">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="thankyou">Thankyou!</string>
    <string name="for_registring">for Registering</string>
    <string name="admin_will_contact">Our admin will contact you for  Offline verification after that you will  be able to login into the platform</string>
    <string name="to_know_more">To know more:</string>
    <string name="contact_us">Contact us</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_mobile_no">Please enter Mobile No.</string>
    <string name="please_enter_valid_mobile_no">Please enter valid mobile no.</string>
    <string name="please_accept_terms_conditions">Please Accept Terms and Conditions</string>
    <string name="please_enter_valid_name">Please enter valid name</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="please_enter_valid_otp">Please enter valid otp</string>
    <string name="deals_in_category">Deals in (Category)</string>
    <string name="please_enter_shop_name">Please enter Shop Name</string>
    <string name="please_enter_customer_name">Please enter Customer Name</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_city">Please enter City</string>
    <string name="please_enter_state">Please enter State</string>
    <string name="please_enter_pincode">Please enter Pincode</string>
    <string name="please_enter_about_the_shop">Please enter something about shop</string>
    <string name="select_valid_gst_percent">Select Valid GST %</string>
    <string name="please_enter_pan_number">Please enter PAN Number</string>
    <string name="please_enter_valid_pan_number">Please enter valid PAN Number</string>
    <string name="please_enter_gst">Please enter GST</string>
    <string name="please_enter_valid_gst">Please enter valid GST</string>
    <string name="please_enter_gst_percent">Please enter GST%</string>
    <string name="please_select_category_first">Please select category</string>
    <string name="please_select_sub_category_first">Please select sub category</string>
    <string name="please_select_sub_sub_category_first">Please select sub sub category</string>
    <string name="please_enter_product_name">Please enter product name</string>
    <string name="please_enter_selling_price">Please enter selling price</string>
    <string name="please_enter_cost_price">Please enter cost price</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="please_select_image">Please select at least one image</string>
    <string name="error_please_enter_a">Please enter a %1$s</string>
    <string name="error_please_enter">Please enter %1$s</string>
    <string name="error_please_enter_valid">Please enter valid %1$s</string>
    <string name="error_about_yourself">Please add something about yourself.</string>
    <string name="error_valid">Please provide valid %1$s</string>
    <string name="error_valid_password">Please enter a %1$s Min 6 char, 1 letter &amp; 1 number </string>
    <string name="error_password_toshort">%1$s too short, min 6 character </string>
    <string name="error_password_short">Password should be at least 6 characters long.</string>
    <string name="error_confirm_password_short">Confirm Password should be at least 6 characters long.</string>
    <string name="error_name_to_long">%1$s too long, max %2$d characters</string>
    <string name="error_name_to_short">%1$s too short, min %2$d characters</string>
    <string name="error_otp_toshort">%1$s too short, min 4 character </string>
    <string name="error_name_toshort">%1$s too short, min 3 character </string>
    <string name="error_pass_match">Password and confirm password does not match.</string>
    <string name="error_connection">Please check your internet connection.</string>
    <string name="error_auth_failed">Authentication Failed</string>
    <string name="error_auth_cancelled">Authentication Cancelled</string>
    <string name="error_something_wrong">Something went wrong, please try again later.</string>
    <string name="error_coming_soon">Coming Soon</string>
    <string name="password">PASSWORD</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_inventory">My Inventory</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="wholesale_store">Wholesale Store</string>
    <string name="single_peace_store">Single Piece Store</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="Qty">Qty:</string>
    <string name="view_all">View All</string>
    <string name="explore">Explore</string>
    <string name="product_name">Product Name</string>
    <string name="sub_category">Sub-Category</string>
    <string name="sub_sub_category">Sub Sub-Category</string>
    <string name="selling_price">Selling Price</string>
    <string name="cost_price">Cost Price</string>
    <string name="payment_options">Payment Option</string>
    <string name="add_product_description">Add Product Description</string>
    <string name="add_product">Add Product</string>
    <string name="add_service">Add Service</string>
    <string name="service_name">Service Name</string>
    <string name="service_price">Service Price</string>
    <string name="service_description">Service Description</string>
    <string name="product_listing">Product Listing</string>
    <string name="upload_image">Upload Image</string>
    <string name="error_pls_enter">Please enter %1$s</string>
    <string name="please_select_service_image">Please upload service image</string>
    <string name="service_added_successfully">Service added successfully</string>
    <string name="service_updated_successfully">Service updated successfully</string>
    <string name="error_valid_amount">Please provide valid %1$s</string>
    <string name="label_retry">Retry</string>
    <string name="label_services">Services</string>
    <string name="label_Your_Agent">Your Agents</string>
    <string name="msg_no_service_list">Oops! No service available.</string>
    <string name="Account_Holder_Name">Account Holder Name</string>
    <string name="IFSC_Code">IFSC Code</string>
    <string name="Account_Type">Account Type</string>
    <string name="Account_Number">Account Number</string>
    <string name="Upload">Upload</string>
    <string name="Disclaimer">Disclaimer :</string>
    <string name="Dummy_Text">Lorem ipsum is a dummy text lorem ipsum is a dummy text</string>
    <string name="Bank_Details">Bank Details</string>
    <string name="order_placed_successfully">Your order placed successfully</string>
    <string name="dummy_time">10 min ago</string>
    <string name="no_notification_yet">No Notification Yet!</string>
    <string name="simply_browse">Simply browse, create a whishlist or make a purchase.</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="about_shop">About the Shop</string>
    <string name="pan_no">PAN Number</string>
    <string name="pan_no_optional">PAN Number (Optional)</string>
    <string name="gst">GST</string>
    <string name="gst_verification">GST verification</string>
    <string name="gst_percent">Set GST%</string>
    <string name="save">SAVE</string>
    <string name="edit">Edit</string>
    <string name="add_items_to_your_physical_inventory">Add Items to your Physical Inventory</string>
    <string name="orders">Orders</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="my_bank_details">My Bank Details</string>
    <string name="faqs">FAQ\'s</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Message">Message</string>
    <string name="general_detail">General Detail</string>
    <string name="business_detail">Business Detail</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_editprofile">Edit Profile</string>
    <string name="name_length">Name is too short.</string>
    <string name="shop_name_length">Shop name is too short.</string>
    <string name="address_line1_blank">Please enter address line1.</string>
    <string name="address_line2_blank">Please enter address line2.</string>
    <string name="city_name_length">City name is too short.</string>
    <string name="state_name_length">State name is too short.</string>
    <string name="about_shop_length">About shop is too short.</string>
    <string name="pan_number_length">PAN number is too short.</string>
    <string name="gst_length">GST is too short.</string>
    <string name="Product_listing">Product Listing</string>
    <string name="Add_to_your_Inventory">Add to your Inventory</string>
    <string name="Sort">Sort</string>
    <string name="Filters">Filters</string>
    <string name="Add_Product">Add Product</string>
    <string name="Edit_Product">Edit Product</string>
    <string name="Update_Product">Update Product</string>
    <string name="please_enter_valid_account_no">Please enter valid Account No.</string>
    <string name="please_enter_valid_account_holder_name">Please enter valid Name</string>
    <string name="valid_IFSC">Please enter valid IFSC Code</string>
    <string name="please_select_account_type">Please Select Account Type</string>
    <string-array name="gst_type_array">
        <item>Select GST %</item>
        <item>5%</item>
        <item>18%</item>
        <item>28%</item>
        <item>32%</item>
    </string-array>
    <string name="Add_Bank_Details">Add Bank Details</string>
    <string name="Update_Bank_Details">Update Bank Details</string>
    <string name="No_Product_Found">No Product Found</string>
    <string name="No_Order">No Order</string>
</resources>