<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tools:context=".dashboard.activity.EditProfileActivity">

    <data>

        <variable
            name="myProfile"
            type="com.retailer.oneops.dashboard.activity.MyProfileActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/header"
            layout="@layout/header_with_back"
            bind:myProfile="@{myProfile}"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/_20sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfile"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@mipmap/avtar_gray" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/latosemibold"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvMobileNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_11ssp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/latosemibold"
                    android:textColor="@color/colorMobileProfile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/latosemibold"
                    android:text="@string/general_detail"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/EditText12ssp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/rect_back_with_corner"
                    android:fontFamily="@font/latoregular"
                    android:hint="@string/email_optional"
                    android:padding="@dimen/_15sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/latosemibold"
                    android:text="@string/business_detail"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvShopName"
                    style="@style/EditText12ssp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/rect_back_with_corner"
                    android:fontFamily="@font/latoregular"
                    android:hint="@string/shop_name"
                    android:padding="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/tvAddLine1"
                    style="@style/EditText12ssp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/rect_back_with_corner"
                    android:fontFamily="@font/latoregular"
                    android:hint="@string/address_line_one"
                    android:padding="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/tvAddLine2"
                    style="@style/EditText12ssp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/rect_back_with_corner"
                    android:fontFamily="@font/latoregular"
                    android:hint="@string/address_line_two"
                    android:padding="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/tvCity"
                    style="@style/EditText12ssp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/rect_back_with_corner"
                    android:fontFamily="@font/latoregular"
                    android:hint="@string/city"
                    android:padding="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/tvState"
                    style="@style/EditText12ssp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/rect_back_with_corner"
                    android:fontFamily="@font/latoregular"
                    android:hint="@string/state"
                    android:padding="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/tvAboutShop"
                    style="@style/EditText12ssp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/rect_back_with_corner"
                    android:fontFamily="@font/latoregular"
                    android:hint="@string/about_shop"
                    android:padding="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/tvPanNumber"
                    style="@style/EditText12ssp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/rect_back_with_corner"
                    android:fontFamily="@font/latoregular"
                    android:hint="@string/pan_no"
                    android:padding="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/tvGst"
                    style="@style/EditText12ssp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/rect_back_with_corner"
                    android:fontFamily="@font/latoregular"
                    android:hint="@string/gst"
                    android:padding="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/tvGstPercent"
                    style="@style/EditText12ssp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/rect_back_with_corner"
                    android:fontFamily="@font/latoregular"
                    android:hint="@string/gst_percent"
                    android:padding="@dimen/_15sdp"/>

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/material_button"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:minHeight="@dimen/_50sdp"
                    android:text="@string/edit"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/latomedium"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>
